<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/activity_login_tv_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome_to_trip_planer"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/activity_login_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="52dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_tv_welcome_text" />

    <EditText
        android:id="@+id/activity_login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="52dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_tv_email"
        android:autofillHints="" />

    <Button
        android:id="@+id/activity_login_btn_sign_in"
        android:layout_width="155dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_et_password" />

    <Button
        android:id="@+id/activity_login_btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_btn_sign_in" />

    <TextView
        android:id="@+id/activity_login_tv_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/new_to_trip_planer_create_an_account"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_btn_sign_in"
        app:layout_constraintVertical_bias="0.814" />

</androidx.constraintlayout.widget.ConstraintLayout>