<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/activity_register_tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/sign_up_to_trip_planer"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/activity_register_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="52dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_tv_sign_up" />

    <EditText
        android:id="@+id/activity_register_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_tv_email"
        android:inputType="text" />

    <EditText
        android:id="@+id/activity_register_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="28dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_et_username" />

    <EditText
        android:id="@+id/activity_register_et_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="24dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_et_password" />

    <Button
        android:id="@+id/activity_register_btn_sign_up"
        android:layout_width="155dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_et_password_repeat" />


</androidx.constraintlayout.widget.ConstraintLayout>