<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/amcp_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        tools:context=".view.MapsChoosePlacesActivity" />

    <Button
        android:id="@+id/amcp_undo_btn"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/amcp_calculate_route_btn"
        android:background="#359c5e"
        android:padding="8dp"
        android:text="@string/undo"
        android:textColor="#ffffff"
        tools:context=".view.MapsChoosePlacesActivity" />

    <Button
        android:id="@+id/amcp_calculate_route_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="5dp"
        android:background="#359c5e"
        android:padding="8dp"
        android:text="@string/calculate_a_route"
        android:textColor="#ffffff"
        tools:context=".view.MapsChoosePlacesActivity" />

    <Button
        android:id="@+id/amcp_btn_save_route"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="5dp"
        android:background="#359c5e"
        android:padding="8dp"
        android:text="@string/save_this_route"
        android:textColor="#ffffff"
        android:visibility="invisible"
        tools:context=".view.MapsChoosePlacesActivity" />

    <TextView
        android:id="@+id/amcp_tv_distances_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="361dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="343dp"
        android:gravity="center"
        android:text="@string/coudn_t_calculate_distances_between_some_places"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.MapsChoosePlacesActivity"/>

    <ProgressBar
        android:id="@+id/amcp_pg_loading_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="183dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="333dp"
        android:gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/black"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.MapsChoosePlacesActivity"/>

</RelativeLayout>